Bug 34489 - FILEOPEN Comments in .docx file all shown together in 1 comment box
Summary: FILEOPEN Comments in .docx file all shown together in 1 comment box
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: All All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard:
Keywords:
: 35571 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-19 13:55 UTC by Zack
Modified: 2013-11-24 18:14 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
File viewed correctly in Word 2007 viewer (428.16 KB, image/jpeg)
2011-02-19 13:55 UTC, Zack
Details
File viewed incorrectly in LO (405.47 KB, image/jpeg)
2011-02-19 13:56 UTC, Zack
Details
Original .docx file (56.86 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2011-02-20 09:39 UTC, Zack
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zack 2011-02-19 13:55:59 UTC
Created attachment 43560 [details]
File viewed correctly in Word 2007 viewer

When opening a .docx file with comments in LO that was created in Word 2007 the comments do not display correctly.  In LO the comments are the same in each box whereas they display correctly in Word 2007 viewer.  I included 2 pictures as an example.
Comment 1 Zack 2011-02-19 13:56:49 UTC
Created attachment 43561 [details]
File viewed incorrectly in LO
Comment 2 Rainer Bielefeld Retired 2011-02-19 23:47:28 UTC
@zcreveling@gmail.com:
Please also attach the .docx sample document and information with what software that document has been created!
Comment 3 Zack 2011-02-20 09:38:35 UTC
The file was initially created in LO and saved as a .doc file and sent to a professor.  From there it was commented on in Word 2007 and re-saved as .docx.  I will attach the .docx that was created from the original .doc.  Hope that helps!
Comment 4 Zack 2011-02-20 09:39:18 UTC
Created attachment 43577 [details]
Original .docx file
Comment 5 tester8 2011-02-20 12:46:23 UTC
Reproduced with LO 3.3.1 RC2 Ubuntu 10.04 x86.
Every single comment in document is a copy of first one!
Comment 6 Zack 2011-02-20 13:02:22 UTC
I've been able to reproduce this problem with every version of LO from the 3.3 Beta 2 straight through to 3.3.1 RC2.  However, the comments are displayed correctly in the Word 2007 viewer as well as Word 2007 itself.
(In reply to comment #5)
> Reproduced with LO 3.3.1 RC2 Ubuntu 10.04 x86.
> Every single comment in document is a copy of first one!
Comment 7 Rainer Bielefeld Retired 2011-02-28 22:22:04 UTC
[Reproducible] with "LibreOffice 3.3.1  – WIN7  Home Premium  (64bit) German UI [OOO330m19 (build 8 / tag 3.3.1.2)]". All comments show content of first comment.
Works fine with MS DOCX Viewer.
Same problem with OOo 3.4-dev.

Related to OOo?
<http://openoffice.org/bugzilla/show_bug.cgi?id=113059>
Bug 113059 -  DOCX:, each comment include the text of all comments in the imported document
Comment 8 Steve Wardell 2011-03-10 21:02:17 UTC
Duplicate of bug 32779?
Comment 9 Rainer Bielefeld Retired 2011-03-10 22:41:44 UTC
> Duplicate of bug 32779?
Or at least related, I also think so.
Comment 10 Zack 2011-03-23 21:00:06 UTC
*** Bug 35571 has been marked as a duplicate of this bug. ***
Comment 11 Cédric Bosdonnat 2011-03-31 03:46:12 UTC
Fixed by this commit in master branch:
http://cgit.freedesktop.org/libreoffice/filters/commit/?id=976e2c074b7abf9ad500a0cc7664110820512312

This fix will be available in 3.4.
Comment 12 davedumanis 2011-07-05 15:10:23 UTC
Hello, this bug has still NOT yet been fixed in LibreOffice 3.4, after having been committed to a fix.

This bug is a dealbreaker for anyone who uses office software professionally.

All developer attention appreciated.
Comment 13 mlinksva 2011-07-05 15:22:10 UTC
(In reply to comment #12)
> Hello, this bug has still NOT yet been fixed in LibreOffice 3.4, after having
> been committed to a fix.
> 
> This bug is a dealbreaker for anyone who uses office software professionally.
> 
> All developer attention appreciated.

Agree. The (much appreciated) fix as of 3.4.1 is partial. Each comment is displayed individually (as opposed to all comments lumped together, displayed repeatedly in <3.4) but the author for each comment is missing, and the timestamp always shows the time at which the document was loaded.
Comment 14 davedumanis 2011-07-05 15:26:19 UTC
I actually cannot get ANY comment flags that I insert in a .docx (Word 2007 format) document to properly save and show again upon reopening. If there is a much appreciated fix I am just not seeing it. Using 3.4.1 for Ubuntu.
Comment 15 mlinksva 2011-07-05 15:33:24 UTC
(In reply to comment #14)
> I actually cannot get ANY comment flags that I insert in a .docx (Word 2007
> format) document to properly save and show again upon reopening. If there is a
> much appreciated fix I am just not seeing it. Using 3.4.1 for Ubuntu.

I believe saving comments in .docx is another issue https://bugs.freedesktop.org/show_bug.cgi?id=33463 this one only concerns display assuming comments inserted (ie by someone using MSWord 2007 or greater).
Comment 16 davedumanis 2011-07-05 16:00:34 UTC
Technically I suppose that is correct, although the functionality is closely
related in my mind. In my work, I am expected to both successfully open and
save .docx files with comments.

Thanks for the bug reference - I have added my comment to 34489.


On Tue, Jul 5, 2011 at 3:33 PM, <bugzilla-daemon@freedesktop.org> wrote:

> https://bugs.freedesktop.org/show_bug.cgi?id=34489
>
> --- Comment #15 from mlinksva <ml@gondwanaland.com> 2011-07-05 15:33:24
> PDT ---
> (In reply to comment #14)
> > I actually cannot get ANY comment flags that I insert in a .docx (Word
> 2007
> > format) document to properly save and show again upon reopening. If there
> is a
> > much appreciated fix I am just not seeing it. Using 3.4.1 for Ubuntu.
>
> I believe saving comments in .docx is another issue
> https://bugs.freedesktop.org/show_bug.cgi?id=33463 this one only concerns
> display assuming comments inserted (ie by someone using MSWord 2007 or
> greater).
>
> --
> Configure bugmail: https://bugs.freedesktop.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.
>
Comment 17 Rainer Bielefeld Retired 2011-07-05 22:04:24 UTC
Did anyone check whether that fix REALLY is in the 3.4.1 branch? I will ask for a check on IRC

@davedumanis
May be your should cite all comments from the bug in your new ones? It's much more comfortable to have the whole bug history in your comment than to scroll few lines up ;-)
Comment 18 Rainer Bielefeld Retired 2011-07-05 23:31:13 UTC
The problem is that it's impossible to handle such "lots of problems with" Bug reports.

I limited the subject of this bug to the fixed "all in 1 box" problem, this looks correct for me with "LibreOffice 3.4.1RC1 - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:103)]" and Original .docx file (2011-02-20 09:39) So I believe this bug really is fixed, and I close this bug again.

For other mentioned and still existing bugs I will check whether they are already known and if not, I will file new reports later (currently I'm in a hurry) and leave a comment here concerning the other bugs.

Currently I see 
- wrong date, Author missing: "Bug 32779 - FILESAVE docx: author missing, 
  current date instead of comment's date"
- Comments are lost: "Bug 33463 - Comments are lost after FILESAVE as DOCX"
Anything I forgot?

@davedumanis
I believe your comment 14 is concerning
"Bug 33463 - Comments are lost after FILESAVE as DOCX"?