fdo#34489: fix the docx import of comments, properly resolve all ids

Comment, footnote and endnote ids are integer values, not strings. The
code was using string though the comments ids where defined as integers
in the model.xml. All are changed to integer values from now.