writerfilter/source/ooxml/Handler.cxx
@@ -51,7 +51,7 @@ void OOXMLFootnoteHandler::attribute(Id name, Value & val)
     switch (name)
     {
     case NS_ooxml::LN_CT_FtnEdnRef_id:
-        mpFastContext->resolveFootnote(val.getString());
+        mpFastContext->resolveFootnote(sal_Int32(val.getInt()));
         break;
     default:
         break;
@@ -79,7 +79,7 @@ void OOXMLEndnoteHandler::attribute(Id name, Value & val)
     switch (name)
     {
     case NS_ooxml::LN_CT_FtnEdnRef_id:
-        mpFastContext->resolveEndnote(val.getString());
+        mpFastContext->resolveEndnote(sal_Int32(val.getInt()));
         break;
     default:
         break;
@@ -107,7 +107,7 @@ void OOXMLCommentHandler::attribute(Id name, Value & val)
     switch (name)
     {
     case NS_ooxml::LN_CT_Markup_id:
-        mpFastContext->resolveComment(val.getString());
+        mpFastContext->resolveComment(val.getInt());
         break;
     default:
         ;
