writerfilter/source/ooxml/OOXMLDocumentImpl.cxx
@@ -76,7 +76,7 @@ void OOXMLDocumentImpl::resolveFastSubStream(Stream & rStreamHandler,
             new OOXMLFastDocumentHandler(xContext);
         pDocHandler->setStream(&rStreamHandler);
         pDocHandler->setDocument(this);
-        pDocHandler->setXNoteId(msXNoteId);
+        pDocHandler->setXNoteId(mnXNoteId);
 
         uno::Reference < xml::sax::XFastDocumentHandler > xDocumentHandler
             (pDocHandler);
@@ -107,14 +107,14 @@ void OOXMLDocumentImpl::resolveFastSubStreamWithId(Stream & rStream,
     rStream.substream(nId, pStream);
 }
 
-void OOXMLDocumentImpl::setXNoteId(const rtl::OUString & rId)
+void OOXMLDocumentImpl::setXNoteId(const sal_Int32 nId)
 {
-    msXNoteId = rId;
+    mnXNoteId = nId;
 }
 
-const rtl::OUString & OOXMLDocumentImpl::getXNoteId() const
+sal_Int32 OOXMLDocumentImpl::getXNoteId() const
 {
-    return msXNoteId;
+    return mnXNoteId;
 }
 
 void OOXMLDocumentImpl::setXNoteType(const Id & nId)
@@ -148,18 +148,18 @@ OOXMLDocumentImpl::getSubStream(const rtl::OUString & rId)
 
 writerfilter::Reference<Stream>::Pointer_t
 OOXMLDocumentImpl::getXNoteStream(OOXMLStream::StreamType_t nType, const Id & rType,
-                                  const rtl::OUString & rId)
+                                  const sal_Int32 nId)
 {
 #ifdef DEBUG_ELEMENT
     debug_logger->startElement("getXNoteStream");
-    debug_logger->attribute("id", rId);
+    debug_logger->attribute("id", nId);
     debug_logger->endElement();
 #endif
 
     OOXMLStream::Pointer_t pStream =
         (OOXMLDocumentFactory::createStream(mpStream, nType));
     OOXMLDocumentImpl * pDocument = new OOXMLDocumentImpl(pStream);
-    pDocument->setXNoteId(rId);
+    pDocument->setXNoteId(nId);
     pDocument->setXNoteType(rType);
 
     return writerfilter::Reference<Stream>::Pointer_t(pDocument);
@@ -167,10 +167,10 @@ OOXMLDocumentImpl::getXNoteStream(OOXMLStream::StreamType_t nType, const Id & rT
 
 void OOXMLDocumentImpl::resolveFootnote(Stream & rStream,
                                         const Id & rType,
-                                        const rtl::OUString & rNoteId)
+                                        const sal_Int32 nNoteId)
 {
     writerfilter::Reference<Stream>::Pointer_t pStream =
-        getXNoteStream(OOXMLStream::FOOTNOTES, rType, rNoteId);
+        getXNoteStream(OOXMLStream::FOOTNOTES, rType, nNoteId);
 
     Id nId;
     switch (rType)
@@ -189,10 +189,10 @@ void OOXMLDocumentImpl::resolveFootnote(Stream & rStream,
 
 void OOXMLDocumentImpl::resolveEndnote(Stream & rStream,
                                        const Id & rType,
-                                       const rtl::OUString & rNoteId)
+                                       const sal_Int32 nNoteId)
 {
     writerfilter::Reference<Stream>::Pointer_t pStream =
-        getXNoteStream(OOXMLStream::ENDNOTES, rType, rNoteId);
+        getXNoteStream(OOXMLStream::ENDNOTES, rType, nNoteId);
 
     Id nId;
     switch (rType)
@@ -210,10 +210,10 @@ void OOXMLDocumentImpl::resolveEndnote(Stream & rStream,
 }
 
 void OOXMLDocumentImpl::resolveComment(Stream & rStream,
-                                       const rtl::OUString & rId)
+                                       const sal_Int32 nId)
 {
     writerfilter::Reference<Stream>::Pointer_t pStream =
-        getXNoteStream(OOXMLStream::COMMENTS, 0, rId);
+        getXNoteStream(OOXMLStream::COMMENTS, 0, nId);
 
     resolveFastSubStreamWithId(rStream, pStream, NS_rtf::LN_annotation);
 }
@@ -325,7 +325,7 @@ void OOXMLDocumentImpl::resolve(Stream & rStream)
             new OOXMLFastDocumentHandler(xContext);
         pDocHandler->setStream(&rStream);
         pDocHandler->setDocument(this);
-        pDocHandler->setXNoteId(msXNoteId);
+        pDocHandler->setXNoteId(mnXNoteId);
         pDocHandler->setIsSubstream( mbIsSubstream );
         uno::Reference < xml::sax::XFastDocumentHandler > xDocumentHandler
             (pDocHandler);
