writerfilter/source/ooxml/OOXMLFastContextHandler.hxx
@@ -146,9 +146,9 @@ public:
 
     void mark(const Id & rId, OOXMLValue::Pointer_t pVal);
 
-    void resolveFootnote(const rtl::OUString & rId);
-    void resolveEndnote(const rtl::OUString & rId);
-    void resolveComment(const rtl::OUString & rId);
+    void resolveFootnote(const sal_Int32 nId);
+    void resolveEndnote(const sal_Int32 nId);
+    void resolveComment(const sal_Int32 nId);
     void resolvePicture(const rtl::OUString & rId);
     void resolveHeader(const sal_Int32 type,
                                 const rtl::OUString & rId);
@@ -166,8 +166,8 @@ public:
     void setDocument(OOXMLDocument * pDocument);
     OOXMLDocument * getDocument();
     void setXNoteId(OOXMLValue::Pointer_t pValue);
-    void setXNoteId(const ::rtl::OUString & rId);
-    const rtl::OUString & getXNoteId() const;
+    void setXNoteId(const sal_Int32 nId);
+    sal_Int32 getXNoteId() const;
     void setForwardEvents(bool bForwardEvents);
     bool isForwardEvents() const;
     virtual void setParent(OOXMLFastContextHandler * pParent);
@@ -432,7 +432,7 @@ public:
 
 private:
     bool mbForwardEventsSaved;
-    ::rtl::OUString msMyXNoteId;
+    sal_Int32 mnMyXNoteId;
 
     virtual void lcl_startFastElement
     (Token_t Element,
